--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "private": true,
   "dependencies": {
     "axios": "^1.7.9",
-    "cra-template-typescript": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
     "sass": "^1.83.4"
   },
+  "devDependencies": {
+    "json-server": "^0.17.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server --watch db.json --port 5000"
   },
   "eslintConfig": {
     "extends": [
